# Sandbox

./: .gitignore  LICENSE  README.md
2025/: 2025-06-09_physics_informed_neural_networks.ipynb  2025-06-09_physics_informed_neural_networks.yaml  2025-06-12_physics_informed_neural_networks.yaml
2025/2025-06-12_physics_informed_neural_networks/: 2025-06-12_physics_informed_neural_networks.ipynb
2025/2025-08-23_mcp_servers_with_observations/: README.md  client.py  config.yaml  create_sql_database.ipynb  environment.yaml  load_env.sh  pyproject.toml  server.py
2025/2025-08-23_mcp_servers_with_observations/src/server/: __init__.py  app.py  app_context.py  configuration.py  constants.py  loader.py
2025/2025-08-23_mcp_servers_with_observations/src/server/sql_database/: database.py  schema_descriptions.py  tools.py
