[project]
name = "sbx-mcp-customers"
version = "0.1.0.dev0"
license = {text = "MIT"}
requires-python = ">=3.11,<4.0"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.4.1",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
